--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,10 @@ REGISTRATION_ENABLED=true
 # Other
 # Set to 'false' if you don't want swagger docs exposed in certain envs
 SWAGGER_ENABLED=true
+SWAGGER_BASE_URL="http://127.0.0.1:3001" # Optional: override the server URL shown in Swagger UI; use a full https:// URL in production
+
+# CORS_ALLOWED_ORIGINS: comma-separated list of allowed origins for CORS (leave empty to allow all origins)
+# Examples:
+# CORS_ALLOWED_ORIGINS=https://example.com,http://localhost:3000
+# CORS_ALLOWED_ORIGINS=  # allow any origin (default when unset)
+CORS_ALLOWED_ORIGINS=
